00-my-react-projects/src/components/common/buttons/backToTop/BurguerBtn/BurguerBtn.css
.burguer-btn-container {
	position: absolute;
	top: 1.1rem;
	right: clamp(2rem, 10%, 8rem);
	height: 1.55rem;
	width: 1.75rem;
	cursor: pointer;
	will-change: contents;
	transition: all 0.5s;
}
.burguer-line {
	position: absolute;
	width: 1.75rem;
	height: 0.25rem;
	left: 0;
	right: 0;
	right: clamp(2rem, 10%, 8rem);

	background-color: var(--color-grey-300);
	border-radius: 2px;

	transition: all 0.5s;
}
.burguer-line-up {
	top: 0;

	z-index: 2;
}
.burguer-line-middle-1 {
	top: 50%;
	transform: translateY(-50%);
}
.burguer-line-middle-2 {
	top: 50%;
	transform: translateY(-50%);
}
.burguer-line-down {
	bottom: 0;
}
.burguer-btn-container:hover {
	top: 1.1rem;
	transform: scale(1.2);
}

.burguer-line-up.opacity {
	opacity: 0;
}
.burguer-line-down.opacity {
	opacity: 0;
}
.burguer-line-middle-1.rotate {
	width: 1.75rem;
	transform: rotate(-45deg);
}
.burguer-line-middle-2.rotate {
	width: 1.75rem;
	transform: rotate(45deg);
}

